--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -10,15 +10,10 @@ footer {
   justify-content: space-evenly;
   flex-direction: row;
   align-items: center;
-  height: 85px;
 }
 .Logo {
   display: flex;
-  flex: auto;
   margin-left: 1%;
-}
-.Logo img {
-  margin: 0% 2%;
 }
 .Apartados {
   display: flex;
@@ -67,12 +62,16 @@ footer {
   justify-content: center;
   margin: 0%;
   width: 100%;
+  padding: 0%;
+  margin-top: 2%;
 }
 .Titulo h2 {
   font-size: 65px;
   font-weight: 700;
   text-align: justify;
   font-family: serif;
+  margin: 0%;
+  padding: 0%;
 }
 .Pmezcales {
   background-color: #ffffff;
@@ -81,13 +80,12 @@ footer {
   align-items: center;
   justify-content: center;
   margin: 0%;
-  padding-top: 2%;
   width: 100%;
 }
 .Pmezcales .productos {
-  margin-top: 5%;
   flex-direction: row;
   display: flex;
+  margin-bottom: 1%;
 }
 .Pmezcales .productos .carta {
   text-align: center;
@@ -99,10 +97,40 @@ h3 {
   font-weight: 500;
 }
 .Pmezcales .Bmostrar {
-  margin-bottom: 2%;
+  margin: 0%;
+  padding: 0%;
+}
+.Pcocteles {
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0%;
+  padding: 0%;
+  width: 100%;
+}
+.Pcocteles .productos {
+  flex-direction: row;
+  display: flex;
+  margin-bottom: 1%;
+}
+.Pcocteles .productos .carta {
+  text-align: center;
+}
+.Pcocteles .productos .carta p,
+h3 {
+  font-family: serif;
+  font-size: 1.5em;
+  font-weight: 500;
+}
+.Pcocteles .Bmostrar {
+  margin: 0%;
+  padding: 0%;
 }
 .Redes {
   margin: 0%;
+  margin-top: 4%;
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
@@ -189,7 +217,7 @@ h3 {
   margin-top: 20px;
 }
 .Pmezcales2 {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -206,10 +234,11 @@ h3 {
 .Pmezcales2 .productos .carta {
   text-align: center;
 }
-.Pmezcales2 .productos .carta p, h3 {
-    font-family: serif;
-    font-size: 1em;
-    font-weight: 500;
+.Pmezcales2 .productos .carta p,
+h3 {
+  font-family: serif;
+  font-size: 1em;
+  font-weight: 500;
 }
 .Pmezcales2 .Bmostrar {
   margin-bottom: 2%;
