--- a/Pagina WEB/css/estilos.css
+++ b/Pagina WEB/css/estilos.css
@@ -250,3 +250,71 @@ h3 {
 .contenedor-productos .boton-mostrar-mas {
   margin-bottom: 2%;
 }
+/* login.html */
+.titulo {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 400px;
+  margin: 0 auto;
+}
+.titulo h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 36px;
+  font-family: serif;
+}
+.formulario input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="password"] {
+  width: calc(100% - 22px);
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  border: none;
+  outline: none;
+  box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
+  font-family: serif;
+  font-size: 16px;
+}
+.formulario input[type="submit"]:hover {
+  filter: brightness(90%);
+  transform: scale(1.1);
+  transition: transform 0.2s ease;
+}
+.formulario .botones {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
+.formulario .botones .boton-volver {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 25%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 12px;
+  font-family: serif;
+}
+.formulario .botones .boton-continuar {
+  background-color: #A0B499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 25%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 12px;
+  font-family: serif;
+}
