--- a/Pagina WEB/css/estilos.css
+++ b/Pagina WEB/css/estilos.css
@@ -18,6 +18,9 @@ footer {
   margin-left: 1%;
   align-items: center;
 }
+.Logo img {
+  margin: 0 2dvh;
+}
 .Apartados {
   display: flex;
   justify-content: space-evenly;
@@ -38,6 +41,7 @@ footer {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  box-shadow: 0px 10px 16px rgba(0, 0, 0, 0.5);
 }
 .Eslogan h1 {
   position: absolute;
@@ -379,67 +383,67 @@ input[type="password"] {
 }
 /* carrito.html */
 .mzcl-cart-container {
-    background-color: #F0F0F0;
-    color: #505050;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f0f0f0;
+  color: #505050;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .mzcl-cart-header {
-    font-family: 'Playfair Display', serif;
-    color: #000000;
-    margin-bottom: 20px;
+  font-family: "Playfair Display", serif;
+  color: #000000;
+  margin-bottom: 20px;
 }
 
 .mzcl-cart-item {
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #D3D3D3;
-    padding: 10px 0;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #d3d3d3;
+  padding: 10px 0;
 }
 
 .mzcl-cart-item:last-child {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .mzcl-cart-image {
-    width: 100px;
-    margin-right: 20px;
+  width: 100px;
+  margin-right: 20px;
 }
 
 .mzcl-cart-description {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .mzcl-cart-price {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .mzcl-cart-action {
-    background-color: #000000;
-    color: #FFFFFF;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
 
 .mzcl-cart-summary {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #FFFFFF;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+  margin-top: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .mzcl-checkout-btn {
-    width: 100%;
-    padding: 10px 0;
-    background-color: #707070;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 16px;
+  width: 100%;
+  padding: 10px 0;
+  background-color: #707070;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 16px;
 }
