Conectar Productos de la base de datos
La busqueda por input funciona pero no por botones, la consola del navegador que el archivo css no se encuentra

--- a/Pagina WEB/css/estilos.css
+++ b/Pagina WEB/css/estilos.css
@@ -231,31 +231,92 @@ h3 {
 .contenedor-productos {
   background-color: #ffffff;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0%;
-  width: 100%;
-}
-.contenedor-productos .fila-productos {
-  background-color: #ffffff;
-  margin-top: 2%;
+  flex-wrap: wrap;
   flex-direction: row;
-  display: flex;
   width: 100%;
-  justify-content: space-evenly;
+  margin-left: 30px;
+  
 }
-.contenedor-productos .fila-productos .carta {
+.contenedor-productos .carta {
   text-align: center;
+  max-width: 250px;
+  height: 430px;
+  flex: 0 0 310px;
+  margin:80px;
+  margin-bottom:100px;
+  padding-top:20px;
+  padding-bottom: 50px;
+
 }
-.contenedor-productos .fila-productos .carta p,
-h3 {
+
+.carta:hover{
+  box-shadow: 0 0 16px rgba(33,33,33,.2); 
+  transform:scale(1.01);
+  border-radius: 20px;
+}
+.contenedor-productos .carta p, h3 {
   font-family: serif;
-  font-size: 1em;
-  font-weight: 500;
 }
-.contenedor-productos .boton-mostrar-mas {
-  margin-bottom: 2%;
+
+.filtro{
+  width: 100%;
+  height: 200px;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  font-family: serif;
+  margin-top:20px;
+  margin-left:140px;
 }
+
+.filtro .buscador{
+  background-color: transparent;
+  width: 40%;
+  border:none;
+  outline:none;
+  border-bottom: 2px solid #000000;
+  padding-bottom: 2px;
+  font-family: serif;
+  font-size: 20px;
+}
+
+
+
+.filtro .buscar{
+  padding: 1em 4em;
+  margin-left: 2em;
+  margin-bottom:5em;
+  background-color: #585858;
+  border:none;
+  color:#ffffff;
+  border-radius:5px;
+  font-family:serif;
+  font-size:10px;
+  box-shadow: rgb(255, 255, 255) 0px 3px 6px, rgb(255, 255, 255) 0px 3px 6px;
+}
+
+.buscar:hover{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 10px 25px;
+}
+
+.boton-producto{
+  border: 2px solid #585858;
+  padding: 0.2em 1.1em;
+  background-color: transparent;
+  color: #585858;
+  cursor:pointer;
+  margin-bottom:20px;
+  margin-left:7px;
+
+}
+
+.boton-producto:hover{
+  background-color:#585858;
+  color:#f0f0f0;
+}
+
+
+
 /* login.html */
 .titulo {
   display: flex;
