--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -353,6 +353,8 @@ h3 {
   height: 10px;
 }
 
+.input[type="number"]
+
 .contenedor-producto .boton-agregar {
   background-color: #222;
   border-radius: 4px;
