--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -384,7 +384,49 @@ h3 {
 .boton-agregar:focus {
   opacity: 0.75;
 }
-
+/* perfil.html */
+.titulo-perfil {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-perfil {
+  display: block;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 400px;
+  margin: 5dvh auto 5dvh auto;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-perfil .botones .boton-cerrar {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-perfil .botones .boton-editar {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-perfil .botones {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
 /* login.html */
 .titulo {
   display: flex;
@@ -444,17 +486,6 @@ input[type="password"] {
   font-size: 12px;
   font-family: serif;
 }
-.formulario .botones .boton-cerrar {
-  background-color: #d9d9d9;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
 .formulario .botones .boton-continuar {
   background-color: #a0b499;
   color: black;
@@ -466,17 +497,7 @@ input[type="password"] {
   font-size: 12px;
   font-family: serif;
 }
-.formulario .botones .boton-editar {
-  background-color: #a0b499;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
+
 /* sign up.html */
 .formulario-sesion {
   display: block;
