--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -387,18 +387,36 @@ h3 {
 /* perfil.html */
 .titulo-perfil {
   display: flex;
-  justify-content: center;
   margin: 0%;
   width: 100%;
+  font-size: 40px;
+  color: #d3d3d3;
+  margin-bottom: 30px;
+  font-family: "Asap", sans-serif;
 }
 .formulario-perfil {
   display: block;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
+  background-color: #464646;
+  padding: 50px;
+  padding-bottom:100px;
+  border-radius: 10px;
   max-width: 400px;
   margin: 5dvh auto 5dvh auto;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600;
+  font-size: 24px;
+  color:#a8a8a8;
+  position: relative;
+}
+.formulario-perfil .botones {
+  position: absolute; 
+  bottom: 2; 
+  left: 40px;
+  right: 40px;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
 }
 .formulario-perfil .botones .boton-cerrar {
   background-color: #d9d9d9;
@@ -412,7 +430,7 @@ h3 {
   font-family: serif;
 }
 .formulario-perfil .botones .boton-editar {
-  background-color: #a0b499;
+  background-color: #99a8b4;
   color: black;
   border: none;
   padding: 10px;
@@ -421,11 +439,6 @@ h3 {
   transition: background-color 0.3s;
   font-size: 15px;
   font-family: serif;
-}
-.formulario-perfil .botones {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 5%;
 }
 /* login.html */
 .titulo {
@@ -436,23 +449,31 @@ h3 {
 }
 .formulario {
   display: block;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
+  background-color: #464646;
+  padding: 50px;
+  padding-bottom:100px;
+  border-radius: 10px;
   max-width: 400px;
   margin: 5dvh auto 5dvh auto;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.2);
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 600;
+  font-size: 24px;
+  color:#a8a8a8;
+  position: relative;
 }
 .titulo h1 {
   text-align: center;
   margin-bottom: 20px;
   font-size: 36px;
-  font-family: serif;
+  font-family: "Asap", sans-serif;
 }
 .formulario input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="password"] {
+  color:#a0b499;
+  background-color: #585858;
   width: calc(100% - 22px);
   padding: 10px;
   margin-bottom: 10px;
@@ -465,12 +486,20 @@ input[type="password"] {
   font-family: serif;
   font-size: 16px;
 }
+
+.formulario input::placeholder{
+  color:#a8a8a8;
+}
 .formulario input[type="submit"]:hover {
   filter: brightness(90%);
   transform: scale(1.1);
   transition: transform 0.2s ease;
 }
 .formulario .botones {
+  position: absolute; 
+  bottom: 2; 
+  left: 30px;
+  right: 30px;
   display: flex;
   justify-content: space-around;
   padding-top: 5%;
@@ -501,13 +530,22 @@ input[type="password"] {
 /* sign up.html */
 .formulario-sesion {
   display: block;
-  background-color: #fff;
+  background-color: #464646;
+  color:#a8a8a8;
   padding: 20px;
   border-radius: 5px;
   max-width: 400px;
   margin: 12dvh auto 12dvh auto;
   box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
 }
+.formulario-sesion .input[type="text"]{
+  color:#a0b499;
+  background-color: #585858;
+}
+.formulario-sesion input::placeholder{
+  color:#a8a8a8;
+}
+
 .formulario-sesion .botones {
   display: flex;
   justify-content: space-around;
