--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -624,3 +624,32 @@ a {
   all: unset;
   cursor: pointer;
 }
+/* recetas.php */
+.contenedor-recetas {
+  background-color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  margin-left: 30px;
+}
+.contenedor-recetas .carta {
+  text-align: center;
+  max-width: 250px;
+  height: 430px;
+  flex: 0 0 310px;
+  margin: 80px;
+  margin-bottom: 100px;
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+
+.contenedor-recetas .carta:hover {
+  box-shadow: 0 0 16px rgba(33, 33, 33, 0.2);
+  transform: scale(1.01);
+  border-radius: 20px;
+}
+.contenedor-recetas .carta p,
+h3 {
+  font-family: serif;
+}
