--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -427,6 +427,49 @@ h3 {
   justify-content: space-around;
   padding-top: 5%;
 }
+/* direccion.html */
+.titulo-direccion {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-direccion {
+  display: block;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 400px;
+  margin: 5dvh auto 5dvh auto;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-direccion .botones-direccion .boton-cerrar-direccion {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion .boton-editar-direccion {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
 /* login.html */
 .titulo {
   display: flex;
