--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -5,6 +5,49 @@ header,
 footer {
   background-color: #242222;
 }
+/* direccion.html */
+.titulo-direccion {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-direccion {
+  display: block;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 400px;
+  margin: 5dvh auto 5dvh auto;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-direccion .botones-direccion .boton-cerrar-direccion {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion .boton-editar-direccion {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
 /* navegacion.php */
 .menu {
   display: flex;
@@ -384,92 +427,6 @@ h3 {
 .boton-agregar:focus {
   opacity: 0.75;
 }
-/* perfil.html */
-.titulo-perfil {
-  display: flex;
-  justify-content: center;
-  margin: 0%;
-  width: 100%;
-}
-.formulario-perfil {
-  display: block;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  max-width: 400px;
-  margin: 5dvh auto 5dvh auto;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
-}
-.formulario-perfil .botones .boton-cerrar {
-  background-color: #d9d9d9;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
-.formulario-perfil .botones .boton-editar {
-  background-color: #a0b499;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
-.formulario-perfil .botones {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 5%;
-}
-/* direccion.html */
-.titulo-direccion {
-  display: flex;
-  justify-content: center;
-  margin: 0%;
-  width: 100%;
-}
-.formulario-direccion {
-  display: block;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  max-width: 400px;
-  margin: 5dvh auto 5dvh auto;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
-}
-.formulario-direccion .botones-direccion .boton-cerrar-direccion {
-  background-color: #d9d9d9;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
-.formulario-direccion .botones-direccion .boton-editar-direccion {
-  background-color: #a0b499;
-  color: black;
-  border: none;
-  padding: 10px;
-  width: 40%;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  font-size: 15px;
-  font-family: serif;
-}
-.formulario-direccion .botones-direccion {
-  display: flex;
-  justify-content: space-around;
-  padding-top: 5%;
-}
 /* login.html */
 .titulo {
   display: flex;
@@ -683,7 +640,8 @@ input[type="password"] {
   text-align: center;
 }
 
-.mzcl-cart-action, .mzcl-cart-action2 {
+.mzcl-cart-action,
+.mzcl-cart-action2 {
   padding: 10px 20px;
   border: none;
   border-radius: 8px;
@@ -697,7 +655,6 @@ input[type="password"] {
   margin-top: 0; /* Elimina el margen superior añadido previamente */
   width: 100%; /* Ajusta el ancho al 100% */
 }
-
 
 a {
   all: unset;
@@ -731,4 +688,162 @@ a {
 .contenedor-recetas .carta p,
 h3 {
   font-family: serif;
+}
+/* direccion.html */
+.titulo-direccion {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-direccion {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 25%;
+  margin: 5dvh 1dvh 5dvh 1dvh;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-direccion .botones-direccion .boton-eliminar-direccion {
+  background-color: #b8c1b2;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion .boton-editar-direccion {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion .boton-agregar-direccion {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-direccion .botones-direccion {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
+.apartados-perfil {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+/* metodo de pago.html */
+.titulo-pago {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-pago {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 25%;
+  margin: 5dvh 1dvh 5dvh 1dvh;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-pago .botones-pago .boton-eliminar-pago {
+  background-color: #b8c1b2;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-pago .botones-pago .boton-agregar-pago {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-pago .botones-pago .boton-editar-pago {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 30%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-pago .botones-pago {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
+}
+.apartados-perfil {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+}
+/* perfil.html */
+.titulo-perfil {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+  width: 100%;
+}
+.formulario-perfil {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 25%;
+  margin: 5dvh 1dvh 5dvh 1dvh;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+.formulario-perfil .botones .boton-cerrar {
+  background-color: #d9d9d9;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-perfil .botones .boton-editar {
+  background-color: #a0b499;
+  color: black;
+  border: none;
+  padding: 10px;
+  width: 40%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 15px;
+  font-family: serif;
+}
+.formulario-perfil .botones {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 5%;
 }
