--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -664,14 +664,15 @@ a {
 .contenedor-recetas {
   background-color: #ffffff;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
-  margin-left: 30px;
+  align-items: center;
 }
 .contenedor-recetas .carta {
-  text-align: center;
-  max-width: 250px;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  width: 80%;
   height: 430px;
   flex: 0 0 310px;
   margin: 80px;
@@ -679,15 +680,27 @@ a {
   padding-top: 20px;
   padding-bottom: 50px;
 }
-
 .contenedor-recetas .carta:hover {
   box-shadow: 0 0 16px rgba(33, 33, 33, 0.2);
   transform: scale(1.01);
   border-radius: 20px;
 }
-.contenedor-recetas .carta p,
-h3 {
+.contenedor-recetas .carta img{
+ margin-left: 100px;
+}
+.contenedor-recetas .texto{
+  margin-right:40px;
+}
+.contenedor-recetas  .texto h3 {
   font-family: serif;
+  font-size: 50px;
+  margin-left: 1rem;
+}
+.contenedor-recetas .texto p {
+  font-family: serif;
+  text-align: justify;
+  font-size: 20px;
+  margin-left: 1rem;
 }
 /* direccion.html */
 .titulo-direccion {
