Hipervinculos y estilos a sección de "Paginas" del footer

--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -203,6 +203,13 @@ h3 {
   font-family: serif;
   line-height: 0.1;
 }
+.Redes .Paginas a{
+  text-decoration: none;
+  color: white;
+  margin-bottom: 10px;
+
+}
+
 /* nosotros.html */
 .nosotros {
   display: flex;
