Estilos al chatbot

--- a/Pagina WEB/estilos.css
+++ b/Pagina WEB/estilos.css
@@ -553,6 +553,45 @@ input[type="password"] {
 .chat-button img:hover {
   transform: scale(1.4);
 }
+.chat-box {
+  border: 1px solid #ccc;
+  padding: 10px;
+  height: 400px;
+  overflow-y: scroll;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 10px; /* Añade margen para el input */
+}
+
+.input-box {
+  display: flex;
+  width: 100%;
+}
+
+.input-box textarea {
+  width: 80%;
+  height: 30px;
+  padding: 10px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif; /* Cambia el tipo de fuente aquí */
+}
+
+.input-box button {
+  width: 20%;
+  height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #007BFF;
+  color: white;
+  cursor: pointer;
+}
+
+.input-box button:hover {
+  background-color: #0056b3;
+}
 /* carrito.php */
 .mzcl-cart-container {
   background-color: #f0f0f0;
